completed init message gateway
